// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<styled.div>
  <styled.label
    htmlFor="blah"
  />
  <styled.input
    id="blah"
    onChange={[Function]}
    value="#000000"
  />
</styled.div>
`;

exports[`renders an initial color if provided 1`] = `
<styled.div>
  <styled.label
    htmlFor="blah"
  />
  <styled.input
    id="blah"
    onChange={[Function]}
    value="#fff"
  />
</styled.div>
`;
